certifications page added

--- a/education.html
+++ b/education.html
@@ -53,7 +53,7 @@
             <li>DevOps</li>
             <li>Recommender Systems</li>
             <li>Professional Practices in IT</li>
-            <li>Information security </li>
+            <li>Information Security</li>
         </ul>
     </section>
     <nav>
@@ -61,6 +61,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="education.html">Education</a></li>
+            <li><a href="certifications.html">Certifications</a></li>
         </ul>
     </nav>
     <script src="script.js"></script>
