--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,8 @@
     <header>
         <h1>Welcome to My Coding World</h1>
     </header>
-    <section class ="home">
-        <h2 id="about_me">About Me</h2>
+    <section class="home">
+        <h2>About Me</h2>
         <p>
             Hello there! I'm Fabiha Atique, a passionate computer science student who finds joy in translating ideas into
             lines of code. My journey in the vast realm of technology has been an exciting adventure, and I'm here to
@@ -35,6 +35,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="education.html">Education</a></li>
+            <li><a href="certifications.html">Certifications</a></li>
         </ul>
     </nav>
     <script src="script.js"></script>
