--- a/certifications.html
+++ b/certifications.html
@@ -1,5 +1,7 @@
 <!-- certifications.html -->
 <!-- new line added  -->
+<!-- this will be merged in the master branch -->
+
 
 <!DOCTYPE html>
 <html lang="en">
